# socket_template

./: .clang-format  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: env_check.cmake
config/: my_config.json
core/: CMakeLists.txt
core/socket/: CMakeLists.txt  socket.cpp  socket.h
core/socket/linux_socket/: linux_socket.cpp  linux_socket.h
core/socket/win_socket/: win_socket.cpp  win_socket.h
src/: CMakeLists.txt  main.cpp
src/socket/: socket.cpp
